k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: glas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glas
    spec:
      containers:
      - image: glasware/gateway:v0.0.0-alpha2
        imagePullPolicy: Always
        name: glas
        ports:
        - name: http
          containerPort: 8080
