k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glas
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: glas
