k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: glas
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: http01
    #external-dns.alpha.kubernetes.io/hostname: glas.ingcr3at1on.online
spec:
  tls:
  - hosts:
    - glas.ingcr3at1on.online
    secretName: glas-tls
  rules:
  - host: glas.ingcr3at1on.online
    http:
      paths:
      - path: /
        backend:
          serviceName: glas
          servicePort: http
